fix: fix problems

--- a/index.html
+++ b/index.html
@@ -1,97 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>cv</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="assets/favicon.ico">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
-</head>
-<body>
-  <header class = "header">
-    <nav class="nav">
-      <ul class="nav-list">
-        <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
-        <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
-        <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
-        <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
-        <li class="nav-item"><a href="#workExperience" class="nav-link">Work Experience</a></li>
-        <li class="nav-item"><a href="#educationEnglish" class="nav-link">Education & English</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main class = "main">
-    <div class="profile">
-      <img src="./assets/img//eduard.png" alt="Eduard Sidorenko" width="128" height="128">
-      <section class="section" id="profile">
-        <h1 class="section-title">Eduard Sidorenko | <b>Junior Web Developer</b></h1>
-      </section>
-    </div>
-    
-    <div class="main-container">
-      <section class="section" id="contacts">
-        <h3 class="section-title">My Contacts:</h3>
-        <ul>
-          <li>Location: Minsk, Belarus</li>
-          <li>Mobile Phone: +375 29 172-75-86</li>
-          <li>Email: <a href="mailto:wildbober228@gmail.com">wildbober228@gmail.com</a></li>
-          <li>GitHub: <a href="https://github.com/wildbober228">wildbober228</a></li>
-          <li>Telegram: <a href="https://t.me/wildbober">@wildbober</a></li>
-          <li>Rs-school Discord server nickname: <span><strong>Eduard (@wildbober228)</strong></span></li>
-        </ul>
-      </section>
-      <section class="section" id="summary">
-        <h3 class="section-title">Summary about myself:</h3>
-        <p>I am a junior <span><b>web developer</b></span>, I have <span><b>a year of commercial experience</b></span> on the basis of the website support team of the BSUIR University.</p>
-        <p>My goal is to become an even better developer than I am now, and I am sure that I can do it because my strength is fast learning and dedication.</p>
-      </section>
-      <section class="section" id="skills">
-        <h3 class="section-title">Skills and Proficiency:</h3>
-        <ol>
-          <li>HTML5, CSS3</li>
-          <li>React JS, Redux</li>
-          <li>JavaScript</li>
-          <li>GIT, GitHub</li>
-          <li>Editors: (Vs Code & Intellij Idea)</li>
-        </ol>
-      </section>
-      <section class="section" id="code">
-        <h3 class="section-title">Code Example:</h3>
-        <p><span><i>The Challenge</i></span>: Your code must return true or false (not 'true' and 'false') depending upon whether the given number is a <span><b>Narcissistic number</b></span> in base 10. This may be True and False in your language.</p>
-        <code>
-          function narcissistic(value) {<Br>
-            &nbsp;let result = 0;<Br>
-            &nbsp;let array = Array.from(value.toString(), Number);<Br>
-            &nbsp;for (let i = 0; i < array.length ; i++) {<Br>
-            &nbsp;result += Math.pow(array[i], array.length);<Br>
-            &nbsp;}<Br>
-            &nbsp;return value === result ? true : false;<Br>
-            }<Br>
-      </code>
-      </section>
-      <section class="section" id="workExperience">
-        <h3 class="section-title">Work Experience:</h3>
-        <p>1 year of commercial experience based on the BSUIR website support team</p>
-      </section>
-      <section class="section" id="educationEnglish">
-        <h3 class="section-title">Education & Languages:</h3>
-        <ul>
-          <li>College of Business and Law 2016-2019.</li>
-          <li>Belarusian State University of Informatics and Radioelectronics 2019-2021 (didn`t graduate).</li>
-          <li>Russian - Native.</li>
-          <li>English - В2.</li>
-        </ul>
-      </section>
-    </div>
-  </main>
-  <footer class = "footer">
-    <a href="https://github.com/wildbober228">GitHub</a>
-    <p style="color: #829984;">2023</p>
-    <a href="https://rs.school/js/">
-      <img src="https://rs.school/images/rs_school_js.svg" alt="Rs-school logo" width="128" height="128">
-    </a>
-  </footer>
-</body>
+  <head>
+    <title>This is the title of the cv!</title>
+  </head>
+  <body>
+    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+  </body>
 </html>
